# VulkanSandbox

./: .gitignore  CMakeLists.txt  README.md  VulkanSandbox.sln  renderdoc_settings.cap
Debug/: VulkanSandbox
VulkanSandbox/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  HeightMapObject.cpp  HeightMapObject.h  Image.cpp  Image.h  MaterialManager.cpp  MaterialManager.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  ShadowMap.cpp  ShadowMap.h  UniformBuffer.h  Utilities.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSandbox.vcxproj  VulkanSandbox.vcxproj.filters  Window.cpp  Window.h  imgui.ini  main.cpp
VulkanSandbox/objects/: Cottage_FREE.mtl  Untitled-2.mtl  light.mtl
VulkanSandbox/shaders/: compileShaders-linux.sh  compileShaders.bat  depthMap.vert  depthMap.vert.spv  frag.spv  shader.frag  shader.vert  vert.spv
bin-int/: VulkanSandbox.exe.recipe  vc143.idb
bin-int/VulkanSandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VulkanSandbox.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
release/: imgui.ini
release-int/: VulkanSandbox.exe.recipe  VulkanSandbox.ipdb
release-int/VulkanSandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VulkanSandbox.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
release/objects/: Untitled-1.mtl
